Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Years__c</fullName>
    <description>Stores the contract term in years</description>
    <formula>FLOOR((YEAR(Contract_End_Date__c) - YEAR(Contract_Start_Date__c)) +
IF( /**End Yr &gt; Start Yr &amp; End Mth &lt;= Start Mth -1 since a full yr has not necessarily passed. If full yr has passed then 2x IF()s below will sort. */
AND(
YEAR(Contract_End_Date__c) &gt; YEAR(Contract_Start_Date__c),
MONTH(Contract_End_Date__c) &lt;= MONTH(Contract_Start_Date__c)
),
-1,
0)
+
IF( /**Different Yrs, Same Months, End Day &gt;= (Start Day-1) +1 yr */
AND(
YEAR(Contract_End_Date__c) &gt; YEAR(Contract_Start_Date__c),
MONTH(Contract_End_Date__c) = MONTH(Contract_Start_Date__c),
OR(
DAY(Contract_End_Date__c) &gt;= DAY(Contract_Start_Date__c-1),
DAY(Contract_Start_Date__c) = 1
)
),
1,
0)
+
IF( /** If End Mth = (Start Mth -1), Start Date is 1st and End Date is last Mth day, +1 yr */
AND(
MONTH(Contract_End_Date__c) = MONTH(Contract_Start_Date__c-1),
DAY(Contract_Start_Date__c) = 1,
DAY(Contract_End_Date__c + 1) &lt; DAY(Contract_End_Date__c)
),
1,
0)
)</formula>
    <label>Contract Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>