Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Terms_Exist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms_Exist__c</fullName>
    <description>Identifies if Contract Terms have been recorded in their entirety against the Opportunity. If all fields are populated return TRUE. If any field is blank then return FALSE.</description>
    <formula>AND(
				NOT(ISBLANK(TEXT(Annual_Price_Adjustment__c ))),  
				NOT(ISBLANK(TEXT(Bond_or_Third_Party_Guarantee__c ))),  
				NOT(ISBLANK(TEXT(Contract_Specification__c ))),  
				NOT(ISBLANK(TEXT(Contractual_Non_Wage_Increase_Due_To_Law__c ))), 
				NOT(ISBLANK(TEXT(Contractual_Wage_Increase__c ))), 
				NOT(ISBLANK(TEXT(Liability_Cap__c ))), 
				NOT(ISBLANK(TEXT(Parent_Guarantee__c ))), 
				NOT(ISBLANK(TEXT(PaymentTermsDays__c ))) 
				)</formula>
    <label>Contract Terms Exist</label>
    <type>Checkbox</type>
</CustomField>