Agentforce/force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>AD-266 - picklist values to identify the type of contract associated with the opportunity</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>