Agentforce/force-app/main/default/objects/Opportunity/fields/ContractCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContractCaseSafeID__c</fullName>
    <description>Used in Opportunity Profile Card LWC to avoid permission errors when linking to Contract.</description>
    <formula>CASESAFEID(Contract__c)</formula>
    <label>ContractCaseSafeID</label>
    <type>Text</type>
</CustomField>