Agentforce/force-app/main/default/objects/Opportunity/fields/Contractual_Non_Wage_Increase_Due_To_Law__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Non_Wage_Increase_Due_To_Law__c</fullName>
    <description>Whether we have a contractual right to pass through increased non-wage costs due to changes in law (different to the point above)</description>
    <inlineHelpText>Whether we have a contractual right to pass through increased non-wage costs due to changes in law (different to the point above)</inlineHelpText>
    <label>Contractual Non-Wage Increase Due To Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Completion_Status</valueSetName>
    </valueSet>
</CustomField>