Agentforce/force-app/main/default/objects/Opportunity/fields/Contractual_Wage_Increase__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Wage_Increase__c</fullName>
    <description>Whether we have a contractual right to pass through increased wage costs</description>
    <inlineHelpText>Whether we have a contractual right to pass through increased wage costs</inlineHelpText>
    <label>Contractual Wage Increase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Completion_Status</valueSetName>
    </valueSet>
</CustomField>