Agentforce/force-app/main/default/objects/Opportunity/fields/Count_of_Opp_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opp_Lines__c</fullName>
    <label># Opp Lines</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>