Agentforce/force-app/main/default/objects/Opportunity/fields/Create_Capacity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Create_Capacity_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to automatically create a Capacity Plan</inlineHelpText>
    <label>Create Capacity Plan</label>
    <type>Checkbox</type>
</CustomField>