Agentforce/force-app/main/default/objects/Opportunity/fields/Create_future_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_future_opportunity__c</fullName>
    <label>Create future opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>