Agentforce/force-app/main/default/objects/Opportunity/fields/Create_Missing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Create_Missing_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Missing Contract</label>
    <type>Checkbox</type>
</CustomField>