Agentforce/force-app/main/default/objects/Opportunity/fields/Created_As_Future_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Created_As_Future_Opportunity__c</fullName>
    <description>Identifies if Opportunity has an Original Opportunity associated, suggesting created as a Future Opportunity</description>
    <formula>NOT(ISBLANK(Original_Opportunity__c))</formula>
    <label>Created As Future Opportunity</label>
    <type>Checkbox</type>
</CustomField>