Agentforce/force-app/main/default/objects/Opportunity/fields/Creator_Country__c.field-meta.xml
<CustomField>
    <fullName>Creator_Country__c</fullName>
    <description>AD-286 - field to capture the country of the user who created the Opportunity</description>
    <label>Creator Country</label>
    <length>122</length>
    <type>Text</type>
</CustomField>