Agentforce/force-app/main/default/objects/Opportunity/fields/Creator_Region__c.field-meta.xml
<CustomField>
    <fullName>Creator_Region__c</fullName>
    <description>AD-344 - field to capture the region of the user who created the Opportunity</description>
    <label>Creator Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>