Agentforce/force-app/main/default/objects/Opportunity/fields/Credit_Risk_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Risk Completed</label>
    <type>Checkbox</type>
</CustomField>