Agentforce/force-app/main/default/objects/Opportunity/fields/Credit_Risk_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Date__c</fullName>
    <label>Credit Risk Date</label>
    <type>Date</type>
</CustomField>