Agentforce/force-app/main/default/objects/Opportunity/fields/Cross_Border_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to indicate this Opportunity is relevant to multiple countries and grant Read Only access to the record for all users.</inlineHelpText>
    <label>Cross-Border Opportunity</label>
    <type>Checkbox</type>
</CustomField>