Agentforce/force-app/main/default/objects/Opportunity/fields/Current_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Value__c</fullName>
    <label>Current Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>