Agentforce/force-app/main/default/objects/Opportunity/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <formula>TEXT(StageName)</formula>
    <inlineHelpText>If eligible to be updated, Stage should be updated by clicking the &apos;Update Opportunity&apos; button above. This button will not appear if it is not eligible to be updated.</inlineHelpText>
    <label>Current Stage</label>
    <type>Text</type>
</CustomField>