Agentforce/force-app/main/default/objects/Opportunity/fields/Current_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Sub_Stage__c</fullName>
    <formula>TEXT(Sub_Stage__c)</formula>
    <inlineHelpText>If eligible to be updated, Sub Stage should be updated by clicking the &apos;Update Opportunity&apos; button above. This button will not appear if it is not eligible to be updated.</inlineHelpText>
    <label>Current Sub Stage</label>
    <type>Text</type>
</CustomField>