Agentforce/force-app/main/default/objects/Opportunity/fields/Custom_Expected_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Custom_Expected_Annual_Revenue__c</fullName>
    <label>Custom Expected Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>