Agentforce/force-app/main/default/objects/Opportunity/fields/Custom_Probability__c.field-meta.xml
<CustomField>
    <fullName>Custom_Probability__c</fullName>
    <description>AD-442 - custom probability % influenced by the substage field</description>
    <label>Custom Probability %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>