Agentforce/force-app/main/default/objects/Opportunity/fields/Days_Since_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Award_Date__c</fullName>
    <description>Calculates the number of days since the Award Date - 0 if the Award Date has not yet passed</description>
    <formula>IF(TODAY() &lt; CloseDate, 0, TODAY() - CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Award Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>