Agentforce/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>