Agentforce/force-app/main/default/objects/Opportunity/fields/Days_to_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Award_Date__c</fullName>
    <formula>IF(TODAY() &gt; CloseDate, 0, CloseDate - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Award Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>