Agentforce/force-app/main/default/objects/Opportunity/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a User who is responsible for supporting in the design for the Opportunity</description>
    <label>Design</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>