Agentforce/force-app/main/default/objects/Opportunity/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>AD-283 Environment values</description>
    <label>Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Bridges</fullName>
            </value>
            <value>
                <fullName>Campus</fullName>
            </value>
            <value>
                <fullName>Care Homes</fullName>
            </value>
            <value>
                <fullName>Clinics</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Conference Centre</fullName>
            </value>
            <value>
                <fullName>Construction Site</fullName>
            </value>
            <value>
                <fullName>Courts</fullName>
            </value>
            <value>
                <fullName>Data Centre</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>Energy Centre</fullName>
            </value>
            <value>
                <fullName>Extra Care Scheme</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Garden Centre</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Hanger</fullName>
            </value>
            <value>
                <fullName>Health Centre</fullName>
            </value>
            <value>
                <fullName>Heritage Building</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Laboratory/Clean Room</fullName>
            </value>
            <value>
                <fullName>Manufacturing Facility</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Power Station</fullName>
            </value>
            <value>
                <fullName>Prisons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>