Agentforce/force-app/main/default/objects/Opportunity/fields/Estimated_number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>Estimated_number_of_sites__c</fullName>
    <description>AD-29 Estimated number of sites from the lead</description>
    <label>Estimated number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>