Agentforce/force-app/main/default/objects/Opportunity/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a User who is the Estimator for the Opportunity</description>
    <label>Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>