Agentforce/force-app/main/default/objects/Opportunity/fields/Expected_Growth__c.field-meta.xml
<CustomField>
    <fullName>Expected_Growth__c</fullName>
    <label>Expected Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>