Agentforce/force-app/main/default/objects/Opportunity/fields/Extension_Value__c.field-meta.xml
<CustomField>
    <fullName>Extension_Value__c</fullName>
    <formula>IF(AND( ISPICKVAL( Type , &quot;Extension&quot;), Annual_Contractual_Revenue__c &gt; Current_Contract_Value__c ) , Current_Contract_Value__c ,  IF(AND( ISPICKVAL( Type , &quot;Extension&quot;), Annual_Contractual_Revenue__c &lt;= Current_Contract_Value__c ) , Annual_Contractual_Revenue__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>