Agentforce/force-app/main/default/objects/Opportunity/fields/External_Debrief__c.field-meta.xml
<CustomField>
    <fullName>External_Debrief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Debrief held with the Client</description>
    <label>External Debrief</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Record selected is not an External Debrief. Please select an External Debrief record.</errorMessage>
        <filterItems>
            <field>Debrief__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>External Debrief</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Debrief__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_External_Debrief</relationshipName>
    <type>Lookup</type>
</CustomField>