Agentforce/force-app/main/default/objects/Opportunity/fields/External_Debrief_Exists__c.field-meta.xml
<CustomField>
    <fullName>External_Debrief_Exists__c</fullName>
    <description>Identify if External Debrief is populated</description>
    <formula>NOT(
ISBLANK(External_Debrief__c)
)</formula>
    <label>External Debrief Exists</label>
    <type>Checkbox</type>
</CustomField>