Agentforce/force-app/main/default/objects/Opportunity/fields/FiscalQuarter__c.field-meta.xml
<CustomField>
    <fullName>FiscalQuarter__c</fullName>
    <label>Fiscal Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>