Agentforce/force-app/main/default/objects/Opportunity/fields/Forecast_Comments__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Comments__c</fullName>
    <description>Comments Provided by Sales on the selected Forecast Category</description>
    <label>Forecast Comments</label>
    <type>TextArea</type>
</CustomField>