Agentforce/force-app/main/default/objects/Opportunity/fields/Forecast_Comments_Populated__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Comments_Populated__c</fullName>
    <description>Displays True if Forecast Comments is populated.</description>
    <formula>NOT(
				ISBLANK(Forecast_Comments__c)
				)</formula>
    <label>Forecast Comments Populated</label>
    <type>Checkbox</type>
</CustomField>