Agentforce/force-app/main/default/objects/Opportunity/fields/Framework_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Framework_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-56 to have a guided process when creating a Lead or Opportunity from a Framework Agreement</description>
    <label>Framework Agreement</label>
    <referenceTo>Framework_Agreement__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>