Agentforce/force-app/main/default/objects/Opportunity/fields/Gain__c.field-meta.xml
<CustomField>
    <fullName>Gain__c</fullName>
    <description>Growth value of New Customer</description>
    <formula>IF(
   ISPICKVAL(Type, &quot;New Customer&quot;),
   Growth__c,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>