Agentforce/force-app/main/default/objects/Opportunity/fields/Generated_via_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Generated_via_Lead_Conversion__c</fullName>
    <description>AD-88 - Track if this Opportunity was generated via Lead Conversion or not</description>
    <formula>NOT(ISBLANK(Lead_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generated via Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>