Agentforce/force-app/main/default/objects/Opportunity/fields/Gross_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Target__c</fullName>
    <description>AD-901 - currency to capture the Gross Margin Target</description>
    <label>Gross Margin Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>