Agentforce/force-app/main/default/objects/Opportunity/fields/Grow__c.field-meta.xml
<CustomField>
    <fullName>Grow__c</fullName>
    <description>Growth value on rebid/extension/upsell/cross-sell</description>
    <formula>IF(
    OR(
        ISPICKVAL(Type, &quot;Rebid&quot;),
        ISPICKVAL(Type, &quot;Extension&quot;),
        ISPICKVAL(Type, &quot;Upsell&quot;),
        ISPICKVAL(Type, &quot;Cross-sell&quot;)
    ),
    Growth__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>