Agentforce/force-app/main/default/objects/Opportunity/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <formula>IF (AND(OR( ISPICKVAL( Type , &quot;Rebid&quot;) , ISPICKVAL( Type , &quot;Extension&quot;)), ( Annual_Contractual_Revenue__c - Current_Contract_Value__c &gt; 0)), ( Annual_Contractual_Revenue__c - Current_Contract_Value__c), IF (AND(OR( ISPICKVAL( Type , &quot;Rebid&quot;) , ISPICKVAL( Type , &quot;Extension&quot;)), ( Annual_Contractual_Revenue__c - Current_Contract_Value__c &lt;= 0)), 0, Annual_Contractual_Revenue__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractual Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>