Agentforce/force-app/main/default/objects/Opportunity/fields/Hard_Service_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Hard_Service_Revenue_Target__c</fullName>
    <description>AD-901 - currency to capture the Hard Service Revenue Target</description>
    <label>Hard Service Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>