Agentforce/force-app/main/default/objects/Opportunity/fields/Has_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Has_Opportunity_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Opportunity Line Item</label>
    <type>Checkbox</type>
</CustomField>