Agentforce/force-app/main/default/objects/Opportunity/fields/Head_of_Bid__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Head of Bid for the related Opportunity</description>
    <label>Head of Bid</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>